--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	//redis session
+	// session storage를 기존의 Spring의 메모리가 아닌 Redis를 이용하기위해
+	implementation 'org.springframework.session:spring-session-data-redis:2.6.1'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
